fixed alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,7 @@
  margin:0;
  padding:0;
 
+  
   }
   h1{
   font-size:75px;
@@ -24,12 +25,11 @@
 
   #mail{
 width:100%;
-height: 220%;
+height: 100vh;
 background-image: url('mail.jpg');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
-opacity:60% ;
   }
 
 
@@ -108,16 +108,16 @@ cursor: pointer;
 
 
 #form-container{
-  margin-top: 20%;
-width:  100%;
-height: 400px;
+  margin-top: 30%;
+min-width:  1200px;
+min-height: 400px;
+
 display: flex;
 flex-direction: column;
 gap:50px;
-flex-grow: 0 0 2;
-position: relative;
+position: relative ;
 align-items: center;
-margin-bottom: 20%;
+
 }
 
 .first-row{
@@ -140,8 +140,6 @@ width: 150px;
   display: flex;
   flex-direction: column;
   gap: 20px;
-
-margin-left: 10%  ;
 }
 
 
@@ -151,17 +149,14 @@ gap:40px;
 }
 
 .text-area{
-
-
   margin-top: 25%;
 }
 
 textarea {
-width: 380px;
+width: 350px;
 height: 65px;
 position: absolute;
 top:30%;
-left: 17%;
 }
 
 
@@ -175,7 +170,7 @@ width:30%;
 #dropdown option {
 
 color: #1E1E1E;
-opacity: 30%;
+
 
 }
 
@@ -183,19 +178,17 @@ opacity: 30%;
 #submit{
 
   position: absolute;
-height:100px;
-width:280px;
+height:80px;
+width:250px;
   background-color:#B43921;
-border-radius:30px ;
-
-left:150%;
+border-radius:30px;
+left:110%;
 top:40%;
 }
 
 #project{
   position: absolute;
   top:20%;
-  left:17%;
 }
 
 .second-sec{
@@ -203,7 +196,6 @@ top:40%;
   display: flex;
   flex-direction: column;
   gap: 20PX;
-left:17%;
 top:55%
 }
 
@@ -215,5 +207,6 @@ top:55%
 input, textarea{
 
 color:#5C6060;
- opacity: 30%; 
+
 }
+
